update executed version

--- a/tf.version.1/04.rnn/01.ready.for.sequence.data.ipynb
+++ b/tf.version.1/04.rnn/01.ready.for.sequence.data.ipynb
@@ -38,10 +38,10 @@
     "  * **embedding** (dense vector)\n",
     "\n",
     "Tokenization\n",
-    "<img src=\"../figures/tokenization.png\" width=\"30%\">\n",
+    "<img src=\"../../figures/tokenization.png\" width=\"30%\">\n",
     "\n",
     "Word embedding\n",
-    "<img src=\"../figures/word_embedding.png\" width=\"30%\">\n",
+    "<img src=\"../../figures/word_embedding.png\" width=\"30%\">\n",
     "\n",
     "* Two ways of word embedding\n",
     "  * Learned from data\n",
@@ -49,16 +49,17 @@
     "\n",
     "```python\n",
     "# TensorFlow code (one-hot embedding)\n",
-    "one_hot = tf.get_variable(name='one_hot_embedding',\n",
-    "                          initializer=tf.eye(num_words, dtype=tf.float32),\n",
-    "                          trainable=False) \n",
-    "inputs = tf.nn.embedding_lookup(params=one_hot, ids=train_data)\n",
+    "one_hot_matrix = tf.get_variable(name='one_hot_embedding',\n",
+    "                                 initializer=tf.eye(num_words, dtype=tf.float32),\n",
+    "                                 trainable=False) \n",
+    "embeddings = tf.nn.embedding_lookup(params=one_hot_matrix, ids=train_seq)\n",
     "\n",
     "# TensorFlow code (dense vector embedding)\n",
-    "one_hot = tf.get_variable(name='embedding',\n",
-    "                          shape=[max_features, embedding_size],\n",
-    "                          initializer=tf.random_uniform_initializer())\n",
-    "inputs = tf.nn.embedding_lookup(params=one_hot, ids=train_data)\n",
+    "embedding_matrix = tf.get_variable(name='embedding',\n",
+    "                                   shape=[num_words, embedding_size],\n",
+    "                                   initializer=tf.random_uniform_initializer(minval=-0.1,\n",
+    "                                                                             maxval=0.1))\n",
+    "embeddings = tf.nn.embedding_lookup(params=embedding_matrix, ids=train_seq)\n",
     "\n",
     "```"
    ]
