--- a/tf.version.1/04.rnn/01.ready.for.sequence.data.ipynb
+++ b/tf.version.1/04.rnn/01.ready.for.sequence.data.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "### Reference\n",
     "* Deep Learning with Python, F. Chollet\n",
-    "\n",
+    "* All figures are borrowed from above book\n",
     "\n",
     "### Preprocessing\n",
     "* Preprocessing text data into useful representations\n",
@@ -38,10 +38,11 @@
     "  * **embedding** (dense vector)\n",
     "\n",
     "Tokenization\n",
-    "<img src=\"../../figures/tokenization.png\" width=\"30%\">\n",
+    "<img width=\"30%\" alt=\"tokenization\" src=\"https://user-images.githubusercontent.com/11681225/46912311-f9f97580-cfac-11e8-9ce1-7aedc99f0982.png\">\n",
     "\n",
     "Word embedding\n",
-    "<img src=\"../../figures/word_embedding.png\" width=\"30%\">\n",
+    "<img width=\"30%\" alt=\"word_embedding\" src=\"https://user-images.githubusercontent.com/11681225/46912315-0d0c4580-cfad-11e8-8cb4-cc10a6a1860c.png\">\n",
+    "\n",
     "\n",
     "* Two ways of word embedding\n",
     "  * Learned from data\n",
