change variable name max_tokens -> max_seq_length

--- a/tf.version.1/04.rnn/03.01.sequence.classification.RNN.ipynb
+++ b/tf.version.1/04.rnn/03.01.sequence.classification.RNN.ipynb
@@ -246,7 +246,7 @@
    "outputs": [],
    "source": [
     "x_train_seq_length = np.array([len(tokens) for tokens in x_train_tokens], dtype=np.int32)\n",
-    "num_tokens = x_train_seq_length"
+    "num_seq_length = x_train_seq_length"
    ]
   },
   {
@@ -263,8 +263,8 @@
     }
    ],
    "source": [
-    "max_tokens = np.max(num_tokens)\n",
-    "print(max_tokens)"
+    "max_seq_length = np.max(num_seq_length)\n",
+    "print(max_seq_length)"
    ]
   },
   {
@@ -290,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train_pad = pad_sequences(sequences=x_train_tokens, maxlen=max_tokens,\n",
+    "x_train_pad = pad_sequences(sequences=x_train_tokens, maxlen=max_seq_length,\n",
     "                            padding=pad, truncating=pad)"
    ]
   },
@@ -470,11 +470,10 @@
    "outputs": [],
    "source": [
     "class CharRNN:\n",
-    "  def __init__(self, num_chars, max_length,\n",
+    "  def __init__(self, num_chars,\n",
     "               seq_pad, seq_length, labels,\n",
     "               num_units=num_units, num_classes=num_classes):\n",
     "    self.num_chars = num_chars\n",
-    "    self.max_length = max_length\n",
     "    self.seq_pad = seq_pad\n",
     "    self.seq_length = seq_length\n",
     "    self.labels = labels\n",
@@ -564,7 +563,6 @@
    ],
    "source": [
     "model = CharRNN(num_chars=num_chars,\n",
-    "                max_length=max_tokens,\n",
     "                seq_pad=seq_pad,\n",
     "                seq_length=seq_length,\n",
     "                labels=labels,\n",
