change prediction -> predictions

--- a/tf.version.1/04.rnn/03.01.sequence.classification.RNN.ipynb
+++ b/tf.version.1/04.rnn/03.01.sequence.classification.RNN.ipynb
@@ -511,10 +511,10 @@
     "    return loss\n",
     "  \n",
     "  def predict(self):\n",
-    "    with tf.variable_scope('prediction'):\n",
-    "      prediction = tf.argmax(input=self.logits, axis=-1, output_type=tf.int32)\n",
+    "    with tf.variable_scope('predictions'):\n",
+    "      predictions = tf.argmax(input=self.logits, axis=-1, output_type=tf.int32)\n",
     "      \n",
-    "      return prediction\n",
+    "      return predictions\n",
     "  \n",
     "  def build(self):\n",
     "    self.global_step = tf.train.get_or_create_global_step()\n",
@@ -524,7 +524,7 @@
     "    self.logits = self.build_outputs()\n",
     "    \n",
     "    self.loss = self.bce_loss()\n",
-    "    self.prediction = self.predict()\n",
+    "    self.predictions = self.predict()\n",
     "    \n",
     "    print(\"complete model build.\")"
    ]
@@ -723,7 +723,7 @@
    "outputs": [],
    "source": [
     "sess.run(train_iterator.initializer)\n",
-    "x_test_pad, y_pred = sess.run([model.seq_pad, model.prediction])"
+    "x_test_pad, y_pred = sess.run([model.seq_pad, model.predictions])"
    ]
   },
   {
